--- a/templates/base.html
+++ b/templates/base.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     {% block title %}
-        <title>Base Title</title>
+        <title>Base Title!</title>
     {% endblock %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     {% block content %}
-        <p>Base content</p>
+        <p>Base content!</p>
     {% endblock %}
 </body>
 </html>
