--- a/templates/simple-registration-form.html
+++ b/templates/simple-registration-form.html
@@ -5,13 +5,15 @@
 {% block content %}
     <fieldset>
         <legend>Registration Info</legend>
-        <span>First Name</span><input type="text" name="fname" value="Jane" />
-        <span>Last Name</span><input type="text" name="lname" value="Humane" />
-        <span>Address</span><input type="text" name="addr1" value="123 Sesame St" />
-        <span>Address 2</span><input type="text" name="addr2" value="Apt. 4" />
-        <span>City</span><input type="text" name="city" value="New York" />
-        <span>State</span><input type="text" name="state" value="NY" />
-        <span>Zip</span><input type="number" name="zip" value="10010" />
+        <label>First Name</label><input type="text" name="fname" value="Jane" />
+        <label>Last Name</label><input type="text" name="lname" value="Humane" />
+        <label>Address</label><input type="text" name="addr1" value="123 Sesame St" />
+        <label>Address 2</label><input type="text" name="addr2" value="Apt. 4" />
+        <label>City</label><input type="text" name="city" value="New York" />
+        <label>State</label><input type="text" name="state" value="NY" />
+        <label>Zip</label><input type="number" name="zip" value="10010" />
     </fieldset>
-    <button id="submit-info" onclick="verifyForm()">Submit</button>
+    <button id="submit-info">Submit</button>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/vendor/jquery-3.2.1.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/src/RegistrationApp.js') }}"></script>
 {% endblock %}
