--- a/templates/simple-registration-form.html
+++ b/templates/simple-registration-form.html
@@ -5,13 +5,14 @@
 {% block content %}
     <fieldset>
         <legend>Registration Info</legend>
-        <label>First Name</label><input id="fname" type="text" name="fname" defaultValue="Jane" />
-        <label>Last Name</label><input id="lname" type="text" name="lname" defaultValue="Humane" />
-        <label>Address</label><input id=""addr1 type="text" name="addr1" defaultValue="123 Sesame St" />
-        <label>Address 2</label><input id="addr2" type="text" name="addr2" defaultValue="Apt. 4" />
-        <label>City</label><input id="city" type="text" name="city" defaultValue="New York" />
-        <label>State</label><input id="state" type="text" name="state" defaultValue="NY" />
-        <label>Zip</label><input id="zipcode" type="text" name="zipcode" defaultValue="10010" />
+        <label>First Name</label><input id="fname" type="text" name="fname" placeholder="ex: Jane" />
+        <label>Last Name</label><input id="lname" type="text" name="lname" placeholder="ex: Humane" />
+        <label>Address</label><input id="addr1" type="text" name="addr1" placeholder="ex: 123 Sesame St" />
+        <label>Address 2</label><input id="addr2" type="text" name="addr2" placeholder="ex: Apt. 4" />
+        <label>City</label><input id="city" type="text" name="city" placeholder="ex: New York" />
+        <label>State</label><input id="state" type="text" name="state" placeholder="ex: NY" />
+        <label>Zip</label><input id="zipcode" type="text" name="zipcode" placeholder="ex: 10010 or 10010-1234" />
+        <label>Country</label><input id="country" type="text" name="country" value="US" disabled="disabled" />
     </fieldset>
     <button id="submit-info">Submit</button>
     <script type="text/javascript" src="{{ url_for('static', filename='js/vendor/jquery-3.2.1.min.js') }}"></script>
