working on server-side validation...

--- a/templates/simple-registration-confirmation.html
+++ b/templates/simple-registration-confirmation.html
@@ -4,6 +4,8 @@
 {% endblock %}
 {% block content %}
     <h3>Registration Complete!</h3>
-    <p>First Name: {{ data.fname }}</p>
+    <!--
+    <p>First Name:</p>
+    -->
     <script type="text/javascript" src="{{ url_for('static', filename='js/vendor/jquery-3.2.1.min.js') }}"></script>
 {% endblock %}
