working on server-side validation and report generation...

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,7 @@
     {% block title %}
         <title>Base Title!</title>
     {% endblock %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/vendor/bootstrap.min.css') }}">
 </head>
 <body>
     {% block content %}
