--- a/templates/simple-registration-form.html
+++ b/templates/simple-registration-form.html
@@ -3,18 +3,21 @@
     <title>Simple Registration Web App - Form</title>
 {% endblock %}
 {% block content %}
-    <fieldset>
-        <legend>Registration Info</legend>
-        <label>First Name</label><input id="fname" type="text" name="fname" placeholder="ex: Jane" />
-        <label>Last Name</label><input id="lname" type="text" name="lname" placeholder="ex: Humane" />
-        <label>Address</label><input id="addr1" type="text" name="addr1" placeholder="ex: 123 Sesame St" />
-        <label>Address 2</label><input id="addr2" type="text" name="addr2" placeholder="ex: Apt. 4" />
-        <label>City</label><input id="city" type="text" name="city" placeholder="ex: New York" />
-        <label>State</label><input id="state" type="text" name="state" placeholder="ex: NY" />
-        <label>Zip</label><input id="zipcode" type="text" name="zipcode" placeholder="ex: 10010 or 10010-1234" />
-        <label>Country</label><input id="country" type="text" name="country" value="US" />
-        <button id="submit-info">Submit</button>
-    </fieldset>
+    <div id="registration-form" class="container">
+        <h2>Registration Form</h2>
+        <fieldset class="form-signin">
+            <label>First Name</label><input id="fname" class="form-control" type="text" name="fname" placeholder="ex: Jane" /><br>
+            <label>Last Name</label><input id="lname" class="form-control" type="text" name="lname" placeholder="ex: Humane" /><br>
+            <label>Address</label><input id="addr1" class="form-control" type="text" name="addr1" placeholder="ex: 123 Sesame St" /><br>
+            <label>Address 2</label><input id="addr2" class="form-control" type="text" name="addr2" placeholder="ex: Apt. 4" /><br>
+            <label>City</label><input id="city" class="form-control" type="text" name="city" placeholder="ex: New York" /><br>
+            <label>State</label><input id="state" class="form-control" type="text" name="state" placeholder="ex: NY" /><br>
+            <label>Zip</label><input id="zipcode" class="form-control" type="text" name="zipcode" placeholder="ex: 10010 or 10010-1234" /><br>
+            <label>Country</label><input id="country" class="form-control" type="text" name="country" value="US" /><br>
+            <button id="submit-info" class="btn btn-lg btn-primary btn-block">Submit</button>
+        </fieldset>
+    </div>
+    <div id="registration-aside-container" class="container"></div>
     <script type="text/javascript" src="{{ url_for('static', filename='js/vendor/jquery-3.2.1.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/src/RegistrationApp.js') }}"></script>
 {% endblock %}
