working on server-side validation and report generation...

--- a/templates/index-template.html
+++ b/templates/index-template.html
@@ -3,7 +3,9 @@
     <title>Simple Registration Web App</title>
 {% endblock %}
 {% block content %}
-    <h3>Welcome Page</h3>
-    <a href="register">Go to Registration Form</a>
-    <a href="registration-report">Go to Registration Report</a>
+    <div class="container">
+        <h3>Welcome Page</h3>
+        <a href="register">Go to Registration Form</a><br>
+        <a href="registration-report">Go to Registration Report</a>
+    </div>
 {% endblock %}
