working on server-side validation and report generation...

--- a/templates/index-template.html
+++ b/templates/index-template.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="container">
-        <h3>Welcome Page</h3>
+        <h3>Welcome to the Registration Demo</h3>
         <a href="register">Go to Registration Form</a><br>
         <a href="registration-report">Go to Registration Report</a>
     </div>
