fine-tuned client-side and server-side validation schemas... fine-tuned form error handling...

--- a/templates/simple-registration-confirmation.html
+++ b/templates/simple-registration-confirmation.html
@@ -3,9 +3,10 @@
     <title>Simple Registration Web App - Confirmation</title>
 {% endblock %}
 {% block content %}
-    <h3>Registration Complete!</h3>
-    <!--
-    <p>First Name:</p>
-    -->
-    <script type="text/javascript" src="{{ url_for('static', filename='js/vendor/jquery-3.2.1.min.js') }}"></script>
+    <div class="container">
+        <h3>Registration Complete!</h3>
+        <!--
+        <p>First Name:</p>
+        -->
+    </div>
 {% endblock %}
