--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,29 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto|Roboto:800");
-
-html {
-    font-family: "Roboto", "sans-serif";
+#registration-form > input.form-control.success {
+    background-color: #468847;
 }
 
-body, fieldset {
-    display: flex;
-    flex-flow: column;
-}
-
-fieldset {
-    width: 360px;
-    height: 440px;
-    margin: 0 auto;
-    border-radius: 8px;
-    border: transparent;
-    background-color: rgba(72, 95, 110, 0.8);
-}
-
-legend {
-    font-size: 1.25em;
-}
-
-button {
-    width: 360px;
-    height: 36px;
-    margin: 4px auto;
+#registration-form > input.form-control.error {
+    background-color: #b94a48;
 }
