--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description"
+          content="Simple website registration demo with some client- and server-side validation to a PostgreSQL database.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block title %}
         <title>Base Title!</title>
     {% endblock %}
